revise introductory paragraph, omit braces, fix typos, modify formulations

--- a/main.tex
+++ b/main.tex
@@ -115,7 +115,8 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 \section{Motivation}
 % ----------------------
 
-Motivated by the COVID-19 disease, several outlets printed two-dimensional depictions of data which usually contained multidimensional datasets. These datasets usually compromise \{\textit{infections, recoverd, death}\} rates with regard to the \textit{country} and sometimes also the evolution over \textit{time}.\\
+Motivated by the COVID-19 disease, several outlets printed two-dimensional depictions of data which displayed multidimensional sets of data. These datasets frequently contained the number of people \textit{infected, recovered} or \textit{dead} due to COVID-19 with regard to the \textit{country} and occasionally the progression of these quantities over \textit{time}.\\
+
 %
 \begin{figure}[h]
   \begin{subfigure}{0.5\textwidth}
