--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,11pt]{article}
 
+
 % Font
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -27,6 +28,12 @@
 \geometry{left=25mm,right=25mm,%
 bindingoffset=0mm, top=20mm,bottom=20mm}
 \linespread{1.3}
+
+%without this package the [H] doesn't run for me (Philip)
+\usepackage{float}
+
+%bibliography
+\bibliographystyle{unsrt}
 
 % Todo notes
 \usepackage{xargs}
@@ -518,24 +525,28 @@ It may happen again that for all glyphs the local utility is zero. Again we have
 
 \newpage
 
-\section{Sources}
+\begin{thebibliography}{999}
 
-Tufte, Edward R. "The visual display of quantitative information graphics press." Cheshire, Connecticut (1983).\\
+\bibitem [1] {tufte}Tufte, Edward R. "The visual display of quantitative information graphics press." Cheshire, Connecticut (1983).\\
 
-Miller, Nancy, et al. "The need for metrics in visual information analysis." Proceedings of the 1997 workshop on New paradigms in information visualization and manipulation. 1997.\\
+\bibitem [2] {miller}Miller, Nancy, et al. "The need for metrics in visual information analysis." Proceedings of the 1997 workshop on New paradigms in information visualization and manipulation. 1997.\\
 
-Brath, Richard. "Metrics for effective information visualization." Proceedings of VIZ'97: Visualization Conference, Information Visualization Symposium and Parallel Rendering Symposium. IEEE, 1997.\\
+\bibitem [3] {brath}Brath, Richard. "Metrics for effective information visualization." Proceedings of VIZ'97: Visualization Conference, Information Visualization Symposium and Parallel Rendering Symposium. IEEE, 1997.\\
 
-Tatu, Andrada, et al. "Visual quality metrics and human perception: an initial study on 2D projections of large multidimensional data." Proceedings of the International Conference on Advanced Visual Interfaces. 2010.\\
+\bibitem [4] {tatu}Tatu, Andrada, et al. "Visual quality metrics and human perception: an initial study on 2D projections of large multidimensional data." Proceedings of the International Conference on Advanced Visual Interfaces. 2010.\\
 
-Urribarri, D. K., \& Castro, S. M. (2016). Prediction of data visibility in two-dimensional scatterplots. Information Visualization, 16(2), 113–125. doi:10.1177/1473871616638892\\
+\bibitem [5] {urribarri}Urribarri, D. K., \& Castro, S. M. (2016). Prediction of data visibility in two-dimensional scatterplots. Information Visualization, 16(2), 113–125. doi:10.1177/1473871616638892\\
 
-Coeurjolly, D., Miguet, S., \& Tougne, L. (2004). 2D and 3D visibility in discrete geometry: an application to discrete geodesic paths. Pattern Recognition Letters, 25(5), 561–570. doi:10.1016/j.patrec.2003.12.002\\
+\bibitem [6] {coeurjolly}Coeurjolly, D., Miguet, S., \& Tougne, L. (2004). 2D and 3D visibility in discrete geometry: an application to discrete geodesic paths. Pattern Recognition Letters, 25(5), 561–570. doi:10.1016/j.patrec.2003.12.002\\
 
-Yang-Pelaez J and Flowers WC. Information content
+\bibitem [7] {Yang}Yang-Pelaez J and Flowers WC. Information content
 measures of visual displays. In: Proceedings of the IEEE symposium on information vizualization 2000 (INFOVIS’00), 2000, pp. 99–103. Washington, DC: IEEE Computer Society.\\
 
-Sergio Cabello, Herman Haverkort, Marc van Kreveld, Bettina Speckmann. Algorithmic Aspects of Proportional Symbol Maps. In: Algorithmica (2010) 58: 543–565. Published with open access at Springerlink.com.%
+\bibitem [8] {caballo}Sergio Cabello, Herman Haverkort, Marc van Kreveld, Bettina Speckmann. Algorithmic Aspects of Proportional Symbol Maps. In: Algorithmica (2010) 58: 543–565. Published with open access at Springerlink.com.%
+
+
+
+\end{thebibliography}
 
   ----------------------
 \end{document}
