distinguish between global and local utility

--- a/main.tex
+++ b/main.tex
@@ -195,11 +195,11 @@ For a fixed stacking order $\phi$, we will denote the disc $\phi(i)$ as $D_i$. W
 furthermore, we denote the length of the visible perimeter as $|U^{vis}_i|$. Two global utility functions come to mind:
 
 \begin{align*}
-    \Gamma_{min} (D) &= \min_{i \in [n]}|U_i^{vis}|\\
-    \Gamma_{sum} (D) &= \sum_{i=1}^n|U_i^{vis}|
+    \lambda_{min} (D) &= \min_{i \in [n]}|U_i^{vis}|\\
+    \lambda_{sum} (D) &= \sum_{i=1}^n|U_i^{vis}|
 \end{align*}
 
-While $\Gamma_{min}$ is focused on the least visible perimeter, $\Gamma_{sum}$ sums up the visible length of all perimeters. Key results proven in \textit{Algorithmic Aspects of Proportional Symbol Maps} are the following
+While $\lambda_{min}$ is focused on the least visible perimeter, $\lambda_{sum}$ sums up the visible length of all perimeters. Key results proven in \textit{Algorithmic Aspects of Proportional Symbol Maps} are the following
 \begin{theorem}
   It is NP-hard to decide if a given collection of congruent disks has a
   physically realizable drawing where at least some given length of the perimeter of
