remove descending radii from explanation

--- a/main.tex
+++ b/main.tex
@@ -222,8 +222,8 @@ Whether a polynomial algorithm for the sum of all visible perimeters exists rema
 \newpage
 
 We won't attempt to construct an algorithm for the sum problem and instead take a look at glyphs which are able to depict more than one piece of information.\\
-The first glyph we will discuss are nested discs. Formally, every glyph $G^i$ is given by a set of discs $G^i_1,...,G^i_k$ such that $r_{j+1}>r_j$ and $G^i_{j+1}\subset G^i_j$ for all $j\in \{1,...,k-1 \}$. Often times figures using nested discs also center all the discs in the same point.\\
-The second type of glyphs we will use are pie charts. A pie chart is formally given by a disc $D_i$ and a set $\{\alpha_1^i,...\alpha_k^i\}$ of dividing lines which we can encode as angle in $[0,2\pi ]$.\\
+The first glyph we will discuss are nested discs. Formally, every glyph $G^i$ is given by a set of discs $G^i_1,...,G^i_k$ such that $G^i_{j+1}\subset G^i_j$ for all $j\in \{1,...,k-1 \}$. Often times figures using nested discs also center all the discs in the same point.\\
+The second type of glyphs we will use are pie charts. A pie chart is formally given by a disc $D_i$ and a set $\{\alpha_1^i,...\alpha_k^i\}$ of dividing lines which we can encode as angle in $[0,\ 2\pi]$.\\
 
 In the next section we will discuss a simple and versatile approach to determine optimal stacking orders for glyphs maximizing utility functions with specific properties for glyph stacking order drawings and then apply it to our glyphs and some utility functions.
 
